@@ -1,3 +1,12 @@
+Mon Jun  4 08:19:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component.mpc:
+        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.h:
+        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.cpp:
+        * connectors/dds4ccm/tests/SetConnectorAttributes/descriptors/Plan.cdp:
+          Make this test compiling with opendds, in that case it doesn't really
+          test a thing. Removed qos_profile string from cdp, was not used
+
 Mon Jun  4 08:04:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/tests/TypeSupport/TypeSupport.mpc:
